some minor readability fixes

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,6 @@ input.select-dropdown {
 
 .container {
   background-color: #fff;
-  /* height: auto; */
   width: 736px;
 }
 
@@ -99,21 +98,16 @@ nav {
 
 .main {
   width: 498px;
-  
   height:100%;
-  
 }
 
 form.col.s12 {
   margin-top: 22px;
-  
 }
 
 .input-field .input-field {
   margin-top: 50px;
 }
-
-
 
 .row.input {
   height: 54px;
@@ -244,12 +238,7 @@ input[type="submit" i] {
   border-style: none;
   border-color: #f89937;
 }
-.button-final-container {
-  height: 100px;
-  width: 300px;
-  margin: 0 auto;
-  border:2px solid red;
-}
+
 .button-final {
   height: 64px;
   width: 235px;
@@ -258,7 +247,6 @@ input[type="submit" i] {
   font-family: Roboto;
   font-size: 16px;
   line-height: 19px;
-  border:2px solid black;
   display:block;
   margin: 0 auto;
 }
